--- a/app/Resources/HWIOAuthBundle/views/Connect/registration.html.twig
+++ b/app/Resources/HWIOAuthBundle/views/Connect/registration.html.twig
@@ -3,20 +3,16 @@
 {% block hwi_oauth_content %}
     <h3>{{ 'header.register' | trans({'%name%': userInformation.realName}, 'HWIOAuthBundle') }}</h3>
     <div class="row">
-        <div class="span6">
-            {{ form_start(form, {'action': path('hwi_oauth_connect_registration', {'key': key}), 'attr': {'class': 'hwi_oauth_registration_register'}}) }}
-                {{ form_widget(form) }}
-                <div>
-                    <button type="submit" class="btn btn-primary">{{ 'connect.registration.submit'|trans({}, 'HWIOAuthBundle') }}</button>
-                    <a href="{{ path('hwi_oauth_connect') }}" class="btn">{{ 'connect.registration.cancel' | trans({}, 'HWIOAuthBundle') }}</a>
+            {{ form_start(form, {'action': path('hwi_oauth_connect_registration', {'key': key}), 'attr': {'class': 'form-control hwi_oauth_registration_register'}}) }}
+                {{ form_widget(form, { 'attr': {'class': 'form-control'} }) }}
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary w-100">{{ 'connect.registration.submit'|trans({}, 'HWIOAuthBundle') }}</button>
+                    <a href="{{ path('hwi_oauth_connect') }}" class="btn w-100">{{ 'connect.registration.cancel' | trans({}, 'HWIOAuthBundle') }}</a>
                 </div>
             {{ form_end(form) }}
-        </div>
-        <div class="span6">
             {% if userInformation.profilePicture is not empty %}
                 <img src="{{ userInformation.profilePicture }}" />
             {% endif %}
-        </div>
     </div>
 
 {% endblock hwi_oauth_content %}
