--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -3,6 +3,6 @@
 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
     {{ form_widget(form, { 'attr': {'class': 'form-control'} }) }}
     <div>
-        <input class="btn btn-primary w-100" value="{{ 'registration.submit'|trans }}" />
+        <input type="submit" class="btn btn-primary w-100" value="{{ 'registration.submit'|trans }}" />
     </div>
 {{ form_end(form) }}
